--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="script.js"></script>
   
   <nav>
-    <img src="logo.png" alt="Logo" class="logo">
+    <img src="images/logo.png" alt="Logo" class="logo">
     <ul>
         <li><a href="index.html"> Home</a></li>
         <li><a href="purchase.html"> Shop Candles</a></li>
@@ -50,7 +50,7 @@
   </div>
   
   <div class="box">
-    <img src="cover.jpg" alt="Assortment of Candles">
+    <img src="images/cover.jpg" alt="Assortment of Candles">
   </div>
   </div>
 
