--- a/purchase.html
+++ b/purchase.html
@@ -44,7 +44,7 @@
 
   <div class="product">
     <div class="image-box">
-      <img src="forestberry.jpg" alt="Forest Berry Candles" style="width: 250px; height: 300px;"> 
+      <img src="images/forestberry.jpg" alt="Forest Berry Candles" style="width: 250px; height: 300px;"> 
     </div>
     <div class="text-box">
       <h2 class="item">Forest Berry</h2>
