--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <script src="script.js"></script>
   
   <nav>
-    <img src="logo.png" alt="Logo" class="logo">
+    <img src="images/logo.png" alt="Logo" class="logo">
     <ul>
         <li><a href="index.html"> Home</a></li>
         <li><a href="purchase.html"> Shop Candles</a></li>
