--- a/purchase.html
+++ b/purchase.html
@@ -12,7 +12,7 @@
   <script src="script.js"></script>
   
   <nav>
-    <img src="logo.png" alt="Logo" class="logo">
+    <img src="images/logo.png" alt="Logo" class="logo">
     <ul>
         <li><a href="index.html"> Home</a></li>
         <li><a href="purchase.html"> Shop Candles</a></li>
@@ -61,7 +61,7 @@
 
   <div class="product">
     <div class="image-box">
-      <img src="warmlinen.jpg" alt="Warm Linen Candles" style="width: 250px; height: 300px;"> 
+      <img src="images/warmlinen.jpg" alt="Warm Linen Candles" style="width: 250px; height: 300px;"> 
     </div>
     <div class="text-box">
       <h2 class="item">Warm Linen</h2>
@@ -78,7 +78,7 @@
 
   <div class="product">
     <div class="image-box">
-      <img src="lavendercream.jpg" alt="Lavender Cream Candles" style="width: 250px; height: 300px;"> 
+      <img src="images/lavendercream.jpg" alt="Lavender Cream Candles" style="width: 250px; height: 300px;"> 
     </div>
     <div class="text-box">
       <h2 class="item">Lavender Cream</h2>
@@ -92,7 +92,7 @@
 
   <div class="product">
     <div class="image-box">
-      <img src="peachy.jpg" alt="Peachy Candles" style="width: 250px; height: 300px;"> 
+      <img src="images/peachy.jpg" alt="Peachy Candles" style="width: 250px; height: 300px;"> 
     </div>
     <div class="text-box">
       <h2 class="item">Peachy</h2>
@@ -109,7 +109,7 @@
 
   <div class="product">
     <div class="image-box">
-      <img src="pinacolada.jpg" alt="Pina Colada Candles" style="width: 250px; height: 300px;"> 
+      <img src="images/pinacolada.jpg" alt="Pina Colada Candles" style="width: 250px; height: 300px;"> 
     </div>
     <div class="text-box">
       <h2 class="item">Pina Colada</h2>
