--- a/purchase.html
+++ b/purchase.html
@@ -27,7 +27,7 @@
   <div class="listing-section">
   <div class="product">
     <div class="image-box">
-      <img src="figtree.jpg" alt="Fig Tree Candles" style="width: 250px; height: 300px;">
+      <img src="images/figtree.jpg" alt="Fig Tree Candles" style="width: 250px; height: 300px;">
     </div>
     <div class="text-box">
       <h2 class="item">Fig Tree</h2>
